css/style.css
.bluepanel {
    background-color: #0a5796;
}
.greypanel {
    background-color: #ededed;
}
.blackpanel {
    background-color: #000;
}
.blackpanel h5 {
    color: #fff;
}
.bluepanel h1 {
    color: #fff;
}
.bluepanel p {
    color: #fff;
}
.bluepanel ul {
    color: #fff;
}
.btn-primary {
    color: #fff;
    background-color: #009b2c;
    border-color: #009b2c;
    box-shadow: 0px 0px 2px #333;
}
.btn-primary:hover {
    background-color: #0a5796;
    border-color: #0a5796;
}
p .lead {
  color: #fff;
}
.panel-primary> .panel-heading {
    color: #fff;
    background-color: #118df0;
    border-color: #118df0;
}
.btn-success {
    color: #fff;
    background-color: #ff304f;
    border-color: #ff304f;
    box-shadow: 0px 0px 2px #333;
}
.btn-success:hover {
    background-color: #25237a;
    border-color: #25237a;
}
.panel-primary {
    border-color: #118df0;
    background-color: #f5f5f5;
}
a {
    color: #118df0;
    text-decoration: none;
}

/* navbar */
.navbar-default {
    background-color: #000;
    border-color: #000;
}
    .navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
    color: #25237a;
}
.odsname {
    color: #fff;
}

.list-group-item-info {
  color: #ffffff;
  background-color: #ff304f;

